syntax = "proto3";

import "google/protobuf/empty.proto";

package pir_grpc;

service PirGrpc {
  rpc GetParams(google.protobuf.Empty) returns (ServerParams) {}
  rpc GetResponse(PirRequest) returns (PirResponse) {}
  rpc GetIndexTree(google.protobuf.Empty) returns (IndexTreeResponse) {}
}

message IndexTreeResponse{
  string idx_tree = 1;
}

message PirRequest{
  bytes row_ciphertext = 1;
  bytes col_ciphertext = 2;
  bytes public_key = 3;
}

message PirResponse{
  bytes response = 1;
}

message ServerParams{
  bytes params = 1;
}
